--- a/src/style/headernavbar.scss
+++ b/src/style/headernavbar.scss
@@ -1,9 +1,13 @@
 .header {
     display: grid;
+    grid-row: header-s/header-e;
+    grid-column: 1/-1;
     justify-content: center;
 }
 
 .navbar {
     background-color: #333;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
+    grid-row: navbar-s/navbar-e;
+    grid-column: 1/-1; 
 }
