--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,5 +12,6 @@ html {
 
 @import 'layout';
 @import 'headernavbar'; 
-@import 'auth/signin.scss';
-@import 'auth/signup.scss'; 
+@import 'auth/signin';
+@import 'auth/signup'; 
+@import 'page-title'; 
