--- a/src/style/details.scss
+++ b/src/style/details.scss
@@ -14,5 +14,8 @@
         & > * {
             text-decoration-line: underline;
         }
+        .details__item {
+            text-decoration-line: none; 
+        }
     }
 }
