--- a/src/style/headernavbar.scss
+++ b/src/style/headernavbar.scss
@@ -2,12 +2,48 @@
     display: grid;
     grid-row: header-s/header-e;
     grid-column: 1/-1;
-    justify-content: center;
+    justify-items: end;
+    align-items: center;
+    grid-template-rows: 1fr;
+    grid-template-columns: [img-s] 1fr [img-e links-s] 1fr [links-e]; 
+    &__img {
+        transform: translateX(25px); 
+        grid-column: img-s/img-e;
+        grid-row: 1/-1;
+    }
+    &__links {
+        display: grid;
+        grid-column: links-s/links-e;
+        grid-row: 1/-1;
+        grid-template-rows: [s] 1fr [e];
+        grid-column-gap: 47px;
+        margin-right: 47px;
+        color: #333;
+        font-size: 16px;
+        & > * {
+            grid-row: s/e;
+        }
+    }
+}
+
+.green-text {
+    color: #00cb79;
 }
 
 .navbar {
+    display: grid;
+    grid-template-rows: [s] 1fr [e]; 
+    justify-content: center;
+    align-items: center;
     background-color: #333;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
     grid-row: navbar-s/navbar-e;
     grid-column: 1/-1; 
+    grid-column-gap: 40px;
+    color: #e6e6e6;
+    font-size: 18px;
+    font-weight: normal;
+    & > * {
+        grid-row: s/e;
+    }
 }
