--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -22,3 +22,6 @@ body {
 @import 'page-title'; 
 @import 'form-fields';
 @import 'details';
+@import 'account/account-information';
+@import 'account/purchase-history';
+@import 'account/account'; 
