--- a/src/style/account/purchase-history.scss
+++ b/src/style/account/purchase-history.scss
@@ -1,3 +1,13 @@
+@mixin print-track {
+    grid-column: m/e;
+    color: #00cb79;
+    font-size: 14px;
+    font-weight: 600;
+    text-decoration-line: underline;
+    justify-self: center;
+    width: 150px; 
+}
+
 .purchase-history {
     &__content {
         display: grid;
@@ -17,4 +27,60 @@
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fit, 80px);
     width: 360px;
+}
+
+.purchase-detail {
+    display: grid;
+    width: 600px;
+    grid-template-columns: [s] 1fr [m] 1fr [e];
+    grid-template-rows: [s] 1fr [sm] 1fr [m-s] 25px [m-e] 1fr [me] 1fr [e]; 
+    &__order-date {
+        grid-column: s/m; 
+        grid-row: s/sm;
+    }
+    &__order-number {
+        grid-column: s/m;
+        grid-row: sm/m-s;
+    }
+    &__shipping-address {
+        grid-column: s/m;
+        grid-row: m-e/e;
+    }
+    &__total {
+        grid-column: m/e;
+        grid-row: s/sm;
+    }
+    &__credit-card {
+        grid-column: m/e;
+        grid-row: sm/m-s;
+    }
+    &__track-shipment {
+        grid-row: m-e/me;
+        @include print-track;
+    }
+    &__print-receipt {
+        grid-row: me/e;
+        @include print-track;
+    }
+}
+
+.purchase-detail-label {
+    display: grid;
+    grid-template-rows: [s] 1fr [e];
+    grid-template-columns: [s] 1fr [m] 1fr [e];
+    grid-gap: 10px;
+    & > * {
+        grid-row: s/e;
+    }
+    &__title {
+        grid-column: s/m;
+        text-align: right;
+        font-weight: 600;
+        font-size: 16px;
+    }
+    &__value {
+        grid-column: m/e;
+        color: #666;
+        font-size: 14px;
+    }
 }
