--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -32,8 +32,7 @@ body {
 
 // SHOP
 @import 'shop/shop';
-@import 'shop/shop-search-bar.scss';
-
-// QUANTITY 
+@import 'shop/shop-search-bar';
+@import 'shop/shop-product';
 @import 'quantity';
 @import 'green-price-tag';
