--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,6 +15,8 @@ body {
     color: #808080;
 }
 
+$bottega-green: #00cb79;
+
 @import 'layout';
 @import 'headernavbar'; 
 @import 'page-title'; 
@@ -36,3 +38,4 @@ body {
 @import 'shop/shop-product';
 @import 'quantity';
 @import 'green-price-tag';
+@import 'shop/shop-cart'; 
