--- a/src/style/details.scss
+++ b/src/style/details.scss
@@ -11,6 +11,9 @@
         display: grid;
         grid-row-gap: 10px; 
         font-size: 14px;
+        &:hover {
+            cursor: pointer;
+        }
         & > * {
             text-decoration-line: underline;
         }
