--- a/src/style/shop/shop-cart.scss
+++ b/src/style/shop/shop-cart.scss
@@ -30,7 +30,12 @@
     width: 76px;
 }
 .cart-content {
+    display: grid;
+    grid-template-rows: 25px [title-s] 40px [title-e products-s] 1fr [products-e footer-s] 113px [footer-e]; 
+    grid-template-columns: [footer-s] 30px [s] 1fr [e] 30px [footer-e];
     &__title {
+        grid-column: s/e;
+        grid-row: title-s/title-e;
         font-weight: 600;
         font-size: 30px;
         font-family: 'Titillium Web';
@@ -38,9 +43,15 @@
     }
     &__products {
         display: grid;
+        grid-row: products-s/products-e;
+        grid-column: s/e;
+        overflow-y: scroll;
+        padding-top: 50px;
     }
     &__footer {
         display: grid;
+        grid-row: footer-s/footer-e;
+        grid-column: footer-s/footer-e;
     }
 }
 
