--- a/src/style/shop/cart-product.scss
+++ b/src/style/shop/cart-product.scss
@@ -12,6 +12,9 @@
         grid-row: s/m;
         grid-column: title-s/title-e;
         align-self: start;
+        font-size: 18px;
+        font-family: 'Encode Sans Condensed';
+        color: #e6e6e6;
     }
     &__quantity {
         grid-row: m/e;
@@ -24,6 +27,11 @@
         grid-row: m/e;
         grid-column: remove-s/remove-e;
         justify-self: start;
+        font-size: 14px;
+        text-decoration-line: underline;
+        &:hover {
+            cursor: pointer;
+        }
     }
     &__price {
         grid-row: m/e; 
