--- a/src/style/shop/shop-cart.scss
+++ b/src/style/shop/shop-cart.scss
@@ -3,14 +3,16 @@
     grid-template-rows: [tog-s] 40px [tog-e con-s] 1fr [con-e];
     grid-template-columns: [s] 1fr [e];
     grid-row-gap: 15px;
+    transition: all .3s ease;
     
     &__toggle {
         grid-row: tog-s/tog-e;
         grid-column: s/e;
         justify-self: end;
-        display: grid;
-        justify-items: center;
-        align-items: center;
+        z-index: 2;
+        &:hover {
+            cursor: pointer;
+        }
     }
     &__content {
         grid-row: con-s/con-e;
@@ -22,6 +24,9 @@
 }
 
 .cart-button {
+    display: grid;
+    justify-items: center;
+    align-items: center;
     background-color: #333;
     color: white;
     font-size: 28px;
@@ -103,5 +108,8 @@
         color: white; 
         font-weight: 600;
     }
-
 } 
+
+.cart-hidden {
+    transform: translateX(520px) 
+}
