--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -53,3 +53,7 @@ $bottega-green: #00cb79;
 @import 'order/review'; 
 @import 'order/reviewForm';
 @import 'order/reviewProduct';
+
+// INFORMATION 
+@import 'information/payment';
+@import 'information/shipping';
