finished shipping form component and sub components

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -57,3 +57,4 @@ $bottega-green: #00cb79;
 // INFORMATION 
 @import 'information/payment';
 @import 'information/shipping';
+@import 'information/infoHelp';
