fixed class name error for icons

--- a/src/style/account/purchase-history.scss
+++ b/src/style/account/purchase-history.scss
@@ -32,6 +32,12 @@
     width: 360px;
 }
 
+.purchase__img {
+    &:hover {
+        cursor: pointer;
+    }
+}
+
 .purchase-detail {
     display: grid;
     width: 600px;
